# homework-24-25

./: .env-example  README.md  groups.json  materials_data.json  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_lesson.py  0002_lesson_paymentmethod_course_owner_payment_and_more.py  0003_alter_lesson_image.py  0003_subscription.py  0004_payment_link_payment_session_id.py  0004_paymentmethod_payment.py
user/: models.py  serializers.py  urls.py  views.py
user/management/commands/: csu.py
user/migrations/: 0001_initial.py
